--- a/App.json
+++ b/App.json
@@ -10,9 +10,9 @@
       "orientation": "portrait",
       "icon": "./assets/icon.png",
       "splash": {
-        "image": "./assets/splash.png",
+        "image": "./assets/Logo.png",
         "resizeMode": "contain",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000"
       },
       "updates": {
         "fallbackToCacheTimeout": 0
